--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,8 +1,13 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header-p"} /-->
 
-<!-- wp:group -->
-<div class="wp-block-group"><!-- wp:query {"queryId":32,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"tagName":"main","layout":{"inherit":true}} -->
-<main class="wp-block-query"><!-- wp:post-template -->
+<!-- wp:query {"queryId":32,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"tagName":"main","layout":{"inherit":true}} -->
+<main class="wp-block-query"><!-- wp:group {"tagName":"header"} -->
+<header class="wp-block-group"><!-- wp:query-title {"type":"archive"} /-->
+
+<!-- wp:term-description /--></header>
+<!-- /wp:group -->
+
+<!-- wp:post-template -->
 <!-- wp:post-title {"isLink":true} /-->
 
 <!-- wp:post-date {"isLink":true} /-->
@@ -23,7 +28,6 @@
 <p>Es wurden keine Beiträge gefunden.</p>
 <!-- /wp:paragraph -->
 <!-- /wp:query-no-results --></main>
-<!-- /wp:query --></div>
-<!-- /wp:group -->
+<!-- /wp:query -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
