🐛 fix issue with full-aligned blocks not being full width

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,14 +1,17 @@
 <!-- wp:template-part {"slug":"header-p"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
-<main class="wp-block-group"><!-- wp:group {"tagName":"article","layout":{"inherit":true}} -->
+<!-- wp:group {"tagName":"main","layout":{"inherit":false}} -->
+<main class="wp-block-group"><!-- wp:group {"tagName":"article","layout":{"inherit":false}} -->
 <article class="wp-block-group"><!-- wp:group {"tagName":"header","layout":{"inherit":true}} -->
 <header class="wp-block-group"><!-- wp:post-title {"level":1} /--></header>
 <!-- /wp:group -->
 
-<!-- wp:post-content /-->
+<!-- wp:post-content {"layout":{"inherit":true}} /--></article>
+<!-- /wp:group --></main>
+<!-- /wp:group -->
 
-<!-- wp:comments-query-loop -->
+<!-- wp:group {"layout":{"inherit":true}} -->
+<div class="wp-block-group"><!-- wp:comments-query-loop -->
 <div class="wp-block-comments-query-loop"><!-- wp:comments-title /-->
 
 <!-- wp:comment-template -->
@@ -42,8 +45,7 @@
 <!-- /wp:comments-pagination -->
 
 <!-- wp:post-comments-form /--></div>
-<!-- /wp:comments-query-loop --></article>
-<!-- /wp:group --></main>
+<!-- /wp:comments-query-loop --></div>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
