✨ add post thumbnail support

--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,9 @@
 <!-- wp:group {"tagName":"main","layout":{"inherit":false}} -->
 <main class="wp-block-group"><!-- wp:group {"tagName":"article","layout":{"inherit":false}} -->
 <article class="wp-block-group"><!-- wp:group {"tagName":"header","layout":{"inherit":true}} -->
-<header class="wp-block-group"><!-- wp:post-title {"level":1} /--></header>
+<header class="wp-block-group"><!-- wp:post-title {"level":1} /-->
+
+<!-- wp:post-featured-image /--></header>
 <!-- /wp:group -->
 
 <!-- wp:post-content {"layout":{"inherit":true}} /--></article>
