--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 <!-- wp:template-part {"slug":"header-h1"} /-->
 
-<!-- wp:group -->
+<!-- wp:group {"layout":{"inherit":true}} -->
 <div class="wp-block-group"><!-- wp:query {"queryId":32,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"tagName":"main","layout":{"inherit":true}} -->
 <main class="wp-block-query"><!-- wp:post-template -->
 <!-- wp:post-title {"isLink":true} /-->
 
 <!-- wp:post-date {"isLink":true} /-->
+
+<!-- wp:post-featured-image /-->
 
 <!-- wp:post-excerpt {"moreText":"Weiterlesen"} /-->
 <!-- /wp:post-template -->
