--- a/templates/single.html
+++ b/templates/single.html
@@ -5,7 +5,9 @@
 <article class="wp-block-group"><!-- wp:group {"tagName":"header","layout":{"inherit":true}} -->
 <header class="wp-block-group"><!-- wp:post-title {"level":1} /-->
 
-<!-- wp:post-date /--></header>
+<!-- wp:post-date /-->
+
+<!-- wp:post-featured-image /--></header>
 <!-- /wp:group -->
 
 <!-- wp:post-content {"layout":{"inherit":true}} /-->
